--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 
 h1{
  font-family: monospace;
+ text-align: center;
    
 }
 p{
@@ -25,18 +26,24 @@ body{
 } */
 
 #idImagem{
-border-radius: 20%; 
- position: absolute;
- left: 50px;
+  border-radius: 20%; 
+  position: absolute;
+  left: 50px;
+  padding: 20px;
+  background-color: orange;
+ 
 }
 
 #divIdDescricao{
-position: absolute;
-text-align: center;
-left: 500px;
-background-color: orange;
-top: 26%;
-padding: 20px;
+  position: absolute;
+  text-align: center;
+  left: 500px;
+  background-color: orange;
+  top: 26%;
+  padding: 35px;
+  padding-bottom: 50px;
+  border-radius: 50%; 
+  margin-left: 10px;
 }
 
 #divIdListaDeCapacidades{
@@ -44,6 +51,16 @@ padding: 20px;
   top: 47%;
   left: 15%;
   font-size: 140%;
+ 
 
 }
 
+/* #idOlCapacidade:nth-child(odd){
+  font-style: italic;
+  color:  red;
+} */
+#divIdListaDeCapacidades ol li:nth-child(odd) {
+ 
+  font-style: italic;
+ 
+}
